# trichi

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy-docs.yml
cmake/: metis.cmake  thread-pool.cmake
demo/: cluster-renderer-dnd.js  cluster-renderer.js  cull-clusters-shader.js  cull-clusters.wgsl  demo-mesh.js  demo-mesh2.js  find_visible_clusters.wgsl  fps-camera.js  index-dnd.html  index.html  render-clusters-shader.js  render-clusters.wgsl  render_clusters.wgsl  trichi-worker.js  ui.js  util.js
demo/trichi/: trichi-wasm.js  trichi-wasm.wasm  trichi.d.ts  trichi.js  trichi.js.map  trichi.min.js.map  trichi.module.js  trichi.module.js.map
demo/trichi/wasm/: trichi-wasm.js
include/: per_meshlet_nuances.hpp  trichi.hpp
js/: .eslintignore  .eslintrc.cjs  CMakeLists.txt  README.md  package-lock.json  package.json  rollup.config.js  trichi-wasm.cpp  tsconfig.json
js/parallel/: trichi-wasm.worker.js
js/sequential/: trichi-wasm.js
js/src/: trichi.ts
js/src/wasm/: trichi-wasm-threads.js  trichi-wasm-threads.worker.js  trichi-wasm.js
src/: common.cpp  impl.hpp  main.cpp  metis.cpp  parallel.cpp  per_meshlet_nuances.cpp  sequential.cpp  trichi.cpp  util.hpp
wasm/: CMakeLists.txt  README.md  trichi-wasm.cpp
